# cryptobacktest

./: CHANGELOG.md  CONTRIBUTING.md  README.md  example_cryptobacktest.ipynb  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/cryptobacktest/: __init__.py  cryptobacktest.py  straddlebacktest.py  vol.py
tests/: test_cryptobacktest.py
