[tool.poetry]
name = "cryptobacktest"
version = "0.0.0"
description = "A package for backtesting crypocurrencies trading strategies."
authors = ["Yoen Corbel"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
