[tool.poetry]
name = "cryptobacktest"
version = "0.0.0"
description = "A package for backtesting crypocurrencies trading strategies."
authors = ["Yoen Corbel"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.15.0"
matplotlib = "^3.10.0"
norm = "^1.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
